# tksudoku

./: .clang-format  .config.sh  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TKPORT_TMPL_README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: auto-config.yml  build.yml  manual-deploy-document.yml
demo/: CMakeLists.txt  demo.cpp
lib/: CMakeLists.txt
lib/cmake/: config.cmake.in
lib/include/TKPORT_TMPL_NAME/: TKPORT_TMPL_NAME.hpp  TKPORT_TMPL_NAME_base.hpp
lib/include/tksudoku/: tksudoku.hpp  tksudoku_base.hpp
lib/src/TKPORT_TMPL_NAME/: TKPORT_TMPL_NAME.cpp  TKPORT_TMPL_NAME_base.cpp
lib/src/tksudoku/: tksudoku.cpp  tksudoku_base.cpp
test/: CMakeLists.txt  TKPORT_TMPL_NAME_test.cpp  tksudoku_test.cpp
workflows/: actions-build-test.yml  manual-vcpkg-prepare.yml  publish.yml
